# HAWC-R-D-Backend-Assignment

./: .gitignore  README.md  data.json  pyproject.toml  requirements.txt
Service/: admin.py  filters.py  models.py  urls.py  views.py
Service/migrations/: 0001_initial.py
Service/templates/Service/: home.html  relateddoctors.html
Service/templates/Service/Doctor/: AddDoctor.html  UpdateDoctorDetails.html  viewdoctors.html
Service/templates/Service/Hospital/: AddHospital.html  UpdateHospitalDetails.html  viewhospitals.html
content_manager/: asgi.py  settings.py  urls.py  wsgi.py
content_manager/static/: styles.css
content_manager/templates/: base.html
